gobmkida/c1/get_last_opponent_move
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_last_opponent_move/src/engine/board.c:1465:6: error: use of undeclared identifier 'dword_9AAC1C'
if ( dword_9AAC1C[v2] == 3 - color ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_last_opponent_move/src/obj/1/board.o] Error 1
